<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="right"
    android:padding="5dp"

    android:layout_height="wrap_content">
 <TextView
     android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
     android:layout_width="match_parent"
     android:layout_weight="2"
     android:layout_height="wrap_content"
     android:text="@string/all"
     android:fontFamily="@font/saudi"
     android:layout_marginRight="5dp"
     android:textSize="14dp"
     android:textColor="@color/text_grey"
     android:id="@+id/all"/>

 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:gravity="right"
     android:padding="5dp"
     android:weightSum="3"
     android:layout_height="wrap_content">
  <TextView
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      android:text="@string/edite"
      android:drawableLeft="@drawable/ic_edite"
      android:fontFamily="@font/saudi"
      android:textSize="14dp"
      android:gravity="left"
      android:textColor="@color/bk_red"
      android:id="@+id/edit"/>
  <TextView
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:layout_width="0dp"
      android:layout_weight="2"
      android:layout_height="wrap_content"
      android:text="@string/governomont"
      android:fontFamily="@font/saudi"
      android:textSize="14dp"
      android:textColor="@color/text_grey"
      android:id="@+id/name"/>

 </LinearLayout>

</LinearLayout>