<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Activities.Login_activity"
    android:padding="20dp"
    android:background="#ffff">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:padding="28dp"
        android:src="@drawable/ic_close_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/close_btn"
        android:scaleType="fitXY"/>
<ImageView
    android:layout_width="70dp"
    android:layout_height="70dp"
    android:src="@drawable/logo"
    app:layout_constraintTop_toTopOf="parent"

    app:layout_constraintRight_toRightOf="parent"

    android:id="@+id/logo"
  android:scaleType="fitXY"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="تسجيل الدخول"
        android:fontFamily="@font/saudi"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:textColor="@color/bk_blue"
        android:id="@+id/t1"
      />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
android:background="@drawable/bk_edite_bay"
        android:id="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/t1"
        android:layout_marginTop="50dp"
        android:hint="@string/phone"
        android:textSize="16dp"
        android:textColor="@color/text_grey"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:inputType="phone"
        android:gravity="right|center"

        android:padding="5dp"/>
    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      app:layout_constraintRight_toRightOf="parent"
        android:layoutDirection="ltr"
        android:textColor="@color/bk_blue"
        android:autoLink="all"
        android:textColorLink="@color/bk_blue"
        android:linksClickable="true"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        android:fontFamily="@font/saudi"
        android:textSize="14dp"

        android:id="@+id/term"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term"
        android:layoutDirection="ltr"
        android:layout_marginRight="10dp"
        android:textColor="@color/bk_blue"
        android:autoLink="all"
        app:layout_constraintRight_toLeftOf="@+id/term"
        android:textColorLink="@color/bk_blue"
        android:linksClickable="true"
      app:layout_constraintBottom_toBottomOf="@+id/term"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        android:fontFamily="@font/saudi"
        android:textSize="14dp"

        android:id="@+id/term_read"/>
    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bk_edite_bay"
        android:gravity="right|center"
        android:hint="@string/ferefy_code"
        android:inputType="numberPassword"
        android:padding="5dp"
        android:textColor="@color/text_grey"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_btn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
android:id="@+id/ln"
        app:layout_constraintTop_toBottomOf="@+id/code">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="40dp"
            android:background="@drawable/bk_ferfy"

            android:id="@+id/verfy_btn"
            android:text="@string/verfy"
            android:textColor="@color/bk_green"
            android:textSize="16sp"
            android:fontFamily="@font/saudi"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/resend_btn"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            />
        <Button

            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:background="@drawable/bk_resend"
            app:layout_constraintTop_toBottomOf="@+id/code"
            android:id="@+id/resend_btn"
            android:text="@string/resend"
            android:textColor="@color/bk_red"
            android:textSize="16sp"

            android:fontFamily="@font/saudi"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toRightOf="@+id/verfy_btn"
            />
    </LinearLayout>
    <Button
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/bk_send"
        app:layout_constraintTop_toBottomOf="@+id/term"
        android:id="@+id/send_btn"
        android:text="@string/send"
        android:textColor="@color/bk_blue"
        android:textSize="16sp"

        android:fontFamily="@font/saudi"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ln"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:id="@+id/progress"/>
</androidx.constraintlayout.widget.ConstraintLayout>