<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.Fragments.Appartement">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/rl"
                android:minHeight="500dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_gravity="right"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/noItem"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noItem"
                    android:fontFamily="@font/saudi"
                    android:textSize="14dp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"/>
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:id="@+id/progress"

                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/RV"

                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/row_item_earth"/>

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottom"

        android:src="@drawable/ic_plase"
        android:id="@+id/fab"
        />
    ////boootem
    <LinearLayout
        android:id="@+id/bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#F3EBEB"
        android:gravity="right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/place"
            android:id="@+id/t"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/contact"
            android:fontFamily="@font/saudi"
            android:textSize="14dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/text_grey"
            />
        <LinearLayout
            android:id="@+id/contact"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/t"
            android:paddingBottom="3dp"
            android:layout_marginRight="5dp"
            android:weightSum="2">


            <Button
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_weight="0.95"
                android:background="@drawable/bk_email"
                android:layout_height="wrap_content"
                android:text="@string/email_"
                android:textColor="@color/bk_white"
                android:fontFamily="@font/saudi"
                android:textSize="14dp"
                android:drawableRight="@drawable/ic_email"
                android:paddingRight="10dp"
                android:id="@+id/email_contacte"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="1dp"
                />
            <Button
                android:paddingRight="10dp"
                android:layout_width="0dp"
                android:layout_weight="0.95"
                android:background="@drawable/bk_ferfy"
                android:layout_height="wrap_content"
                android:text="@string/whatup"
                android:textColor="@color/bk_green"
                android:fontFamily="@font/saudi"
                android:textSize="14dp"
                android:drawableRight="@drawable/ic_whatsapp"
                android:id="@+id/whatup_contacte"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>