<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/bk_white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:minWidth="100dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:background="@drawable/bk_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:fontFamily="@font/saudi"
                android:layout_marginRight="5dp"
                android:textSize="14dp"
                android:textColor="@color/text_grey"
                android:id="@+id/all"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_gravity="right"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/noItem"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noItem"
                    android:fontFamily="@font/saudi"
                    android:textSize="14dp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>
                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:id="@+id/progress"
                    android:layout_marginBottom="10dp"

                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/RV"
                    tools:listitem="@layout/row_item_governomont"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            </RelativeLayout>
            <LinearLayout

                android:background="#9AECEAEA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layoutDirection="rtl"
                android:id="@+id/add">
                <View
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_height="5dp"
                    android:background="@color/text_grey"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:fontFamily="@font/saudi"
                    android:textSize="16dp"
                    android:textColor="@color/bk_green"
                    android:text="@string/add_new"


                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>