<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    app:cardCornerRadius="15dp"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img"
        android:scaleType="fitXY"
        android:id="@+id/img"/>
</androidx.cardview.widget.CardView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        >
        <LinearLayout
            android:gravity="top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
android:layout_marginRight="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="100"
                android:fontFamily="@font/saudi"
                android:textSize="14dp"

                android:textColor="@color/text_grey"
                />
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/bulding"
            android:fontFamily="@font/saudi"
            android:textSize="14dp"

            android:textColor="@color/text_grey"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
android:layout_marginRight="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="."
                android:fontFamily="@font/saudi"
                android:textSize="30dp"

                android:textColor="@color/text_grey"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="02"
                android:fontFamily="@font/saudi"
                android:textSize="14dp"

                android:textColor="@color/text_grey"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/room"
                android:fontFamily="@font/saudi"
                android:textSize="14dp"

                android:textColor="@color/text_grey"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
android:layout_marginRight="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="."
                android:fontFamily="@font/saudi"
                android:textSize="30dp"

                android:textColor="@color/text_grey"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="03"
                android:fontFamily="@font/saudi"
                android:textSize="14dp"

                android:textColor="@color/text_grey"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/bath"
                android:fontFamily="@font/saudi"
                android:textSize="14dp"

                android:textColor="@color/text_grey"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintLeft_toLeftOf="parent"
                android:text="."
                android:fontFamily="@font/saudi"
                android:textSize="30dp"

                android:textColor="@color/text_grey"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="€4,999"
            android:fontFamily="@font/saudi"
            android:textSize="16dp"

            android:textColor="@color/bk_red"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/place"
            android:fontFamily="@font/saudi"
            android:textSize="14dp"
            android:drawableLeft="@drawable/ic_location"
            android:textColor="@color/text_grey"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>