<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"

    tools:context=".Activities.Activities.MainActivity">
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       >

   </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/header"

        >
        <LinearLayout
            android:id="@+id/ln"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:gravity="right"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/place"
                android:fontFamily="@font/saudi"
                android:textSize="16dp"
                android:drawableRight="@drawable/ic_location"
                android:textColor="@color/text_grey"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                >
                <Button
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_width="100dp"
                    android:minWidth="100dp"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/logo"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/um"
                    android:background="@drawable/bk_btn_take_img"
                    android:fontFamily="@font/saudi"
                    android:textSize="16dp"
                    android:paddingLeft="10dp"
                    android:drawableLeft="@drawable/ic_down"
                    android:textColor="@color/text_grey"
                    android:entries="@array/places"
                    android:layoutDirection="rtl"
                    android:layout_marginRight="10dp"
                    android:id="@+id/municipality_sp"/>
                <Button
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_width="100dp"
                    android:minWidth="100dp"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/logo"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/governomont"
                    android:fontFamily="@font/saudi"
                    android:textSize="16dp"
                    android:drawableLeft="@drawable/ic_down"
                    android:background="@drawable/bk_btn_take_img"
                    android:paddingLeft="10dp"
                    android:textColor="@color/text_grey"
                    android:entries="@array/places"
                    android:layoutDirection="rtl"
                    android:layout_marginRight="10dp"
                    android:id="@+id/governomo_sp"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="50dp"
            android:id="@+id/menu"
            android:padding="15dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_menu"/>
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="50dp"
            android:id="@+id/filter"
            android:padding="15dp"
            android:layout_height="50dp"
           app:layout_constraintLeft_toRightOf="@+id/menu"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_filter"
           />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header"

        >
        <com.google.android.material.tabs.TabLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toBottomOf="@+id/ln"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tab"
            style="@style/tablayout"
            />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpage"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tab"
            app:layout_constraintRight_toRightOf="parent"
            />





    </LinearLayout>



</LinearLayout>